--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Psychology Paper 1 Main Page</title>
     </head>
     <body>
-        
+        <h1>Paper 1</h1>
     </body>
 </html>
