--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     </head>
     <body>
         <h1>Paper 1</h1>
-        <p>GCSE Psychology has two papers</p>
+        <p>
+            As you probably know OCR Psychology is split into two papers:
+            the first on Psychological Problems, Criminal Psychology and Developement;
+            the second Social Influence, Sleep and Dreaming, and Memory.
+            This website will hopefully contain all you need to revise for your test :-)
+        </p>
     </body>
 </html>
