--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Psychology Paper 1 Main Page</title>
     </head>
     <body>
-        <h1>Paper 1</h1>
-        <p>
-            As you probably know OCR Psychology is split into two papers:
-            the first on Psychological Problems, Criminal Psychology and Developement;
-            the second Social Influence, Sleep and Dreaming, and Memory.
-            This website will hopefully contain all you need to revise for your test :-)
-        </p>
+        <div>
+            <h1>Paper 1</h1>
+            <p>
+                As you probably know OCR Psychology is split into two papers:
+                the first on Psychological Problems, Criminal Psychology and Developement;
+                the second Social Influence, Sleep and Dreaming, and Memory.
+                This website will hopefully contain all you need to revise for your test :-)
+            </p>
+        </div>
     </body>
 </html>
