--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="index.css">
         <title>Psychology Paper 1 Main Page</title>
     </head>
     <body>
-        <div>
+        <div class="Main">
             <h1>Paper 1</h1>
             <p>
                 As you probably know OCR Psychology is split into two papers:
