--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>Psychology Paper 1 Main Page</title>
     </head>
     <body>
+        <div class="Menu">
+            <h2>Menu</h2>
+        </div>
         <div class="Main">
             <h1>Paper 1</h1>
             <p>
