--- a/paper-2.html
+++ b/paper-2.html
@@ -7,8 +7,7 @@
     <body>
         <div class="Menu">
             <h2>Menu:</h2>
-            <a href="paper-1.html">Paper 1</a>
-            <a href="paper-2.html">Paper 2</a>
+            <a href="paper-1.html"></a>
         </div>
         <div class="Main">
             <h1>Paper 1</h1>
