--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <div class="Menu">
             <h2>Menu:</h2>
-            <a href="paper-1.html">Paper 1</a>
-            <a href="paper-2.html">Paper 2</a>
+            <a href="paper-1.html">Paper 1</a><br><br>
+            <a href="paper-2.html">Paper 2</a><br><br>
         </div>
         <div class="Main">
             <h1>Paper 1</h1>
