--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="index.css">
-        <title>Psychology Paper 1 Main Page</title>
+        <title>Psychology Papers Main Page</title>
     </head>
     <body>
         <div class="Menu">
@@ -11,13 +11,14 @@
             <a href="paper-2.html">Paper 2</a><br><br>
         </div>
         <div class="Main">
-            <h1>Paper 1</h1>
+            <h1>Papers</h1>
             <p>
                 As you probably know OCR Psychology is split into two papers:
                 the first on Psychological Problems, Criminal Psychology and Developement;
                 the second Social Influence, Sleep and Dreaming, and Memory.
                 This website will hopefully contain all you need to revise for your test :-)
             </p>
+            <img>
         </div>
     </body>
 </html>
