--- a/paper-1.html
+++ b/paper-1.html
@@ -2,20 +2,29 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="index.css">
-        <title>Psychology Paper 1 Main Page</title>
+        <title>Psychology Paper 1</title>
     </head>
     <body>
         <div class="Menu">
             <h2>Menu:</h2>
-            <a href="paper-1.html"></a>
+            <a href="index.html">Main Page</a><br><br>
         </div>
         <div class="Main">
             <h1>Paper 1</h1>
+            <h2>Psychological Problems</h2>
             <p>
                 As you probably know OCR Psychology is split into two papers:
                 the first on Psychological Problems, Criminal Psychology and Developement;
                 the second Social Influence, Sleep and Dreaming, and Memory.
                 This website will hopefully contain all you need to revise for your test :-)
+            </p>
+            <h2>Criminal Psychology</h2>
+            <p>
+
+            </p>
+            <h2>Developement</h2>
+            <p>
+
             </p>
         </div>
     </body>
