--- a/paper-2.html
+++ b/paper-2.html
@@ -7,10 +7,10 @@
     <body>
         <div class="Menu">
             <h2>Menu:</h2>
-            <a href="paper-1.html"></a>
+            <a href="index.html">Main Page</a><br><br>
         </div>
         <div class="Main">
-            <h1>Paper 1</h1>
+            <h1>Paper 2</h1>
             <p>
                 As you probably know OCR Psychology is split into two papers:
                 the first on Psychological Problems, Criminal Psychology and Developement;
