--- a/paper-1.html
+++ b/paper-1.html
@@ -7,22 +7,25 @@
     <body>
         <div class="Menu">
             <h2>Menu:</h2>
-            <a href="index.html">Main Page</a><br><br>
+            <ul>
+                <li><a href="index.html">Main Page</a></li><br>
+            </ul>
         </div>
         <div class="Main">
             <h1>Paper 1</h1>
             <h2>Psychological Problems</h2>
             <p>
-                As you probably know OCR Psychology is split into two papers:
-                the first on Psychological Problems, Criminal Psychology and Developement;
-                the second Social Influence, Sleep and Dreaming, and Memory.
-                This website will hopefully contain all you need to revise for your test :-)
+                
             </p>
             <h2>Criminal Psychology</h2>
             <p>
 
             </p>
             <h2>Developement</h2>
+            <p>
+
+            </p>
+            <h2>Research Methods - Designing an Investigation</h2>
             <p>
 
             </p>
