--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <body>
         <div class="Menu">
             <h2>Menu:</h2>
-            <a href="paper-1.html">Paper 1</a><br><br>
-            <a href="paper-2.html">Paper 2</a><br><br>
+            <ul>
+                <li><a href="paper-1.html">Paper 1</a></li><br>
+                <li><a href="paper-2.html">Paper 2</a></li><br>
+            </ul>
         </div>
         <div class="Main">
             <h1>Papers</h1>
+            <img src="https://jokes.boyslife.org/files/2018/10/birthdays.jpg" alt="Pinata's Birthdayphobia Therapist">
+            <h2>Introduction</h2>
             <p>
                 As you probably know OCR Psychology is split into two papers:
                 the first on Psychological Problems, Criminal Psychology and Developement;
                 the second Social Influence, Sleep and Dreaming, and Memory.
                 This website will hopefully contain all you need to revise for your test :-)
             </p>
-            <img>
         </div>
     </body>
 </html>
