--- a/paper-2.html
+++ b/paper-2.html
@@ -7,15 +7,27 @@
     <body>
         <div class="Menu">
             <h2>Menu:</h2>
-            <a href="index.html">Main Page</a><br><br>
+            <ul>
+                <li><a href="index.html">Main Page</a></li><br>
+            </ul>
         </div>
         <div class="Main">
             <h1>Paper 2</h1>
+            <h2>Social Influence</h2>
             <p>
-                As you probably know OCR Psychology is split into two papers:
-                the first on Psychological Problems, Criminal Psychology and Developement;
-                the second Social Influence, Sleep and Dreaming, and Memory.
-                This website will hopefully contain all you need to revise for your test :-)
+                
+            </p>
+            <h2>Sleep and Dreaming</h2>
+            <p>
+
+            </p>
+            <h2>Memory</h2>
+            <p>
+
+            </p>
+            <h2>Research Methods</h2>
+            <p>
+
             </p>
         </div>
     </body>
