--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
                 As you probably know OCR Psychology is split into two papers:
                 the first on Psychological Problems, Criminal Psychology and Developement;
                 the second Social Influence, Sleep and Dreaming, and Memory.
-                This website will hopefully contain all you need to revise for your test :-)
+                You will also be tested on Research Methods in both papers.
+                This website will hopefully contain all you need to revise for Psychology :-)
             </p>
         </div>
+        <div class="Game_Ad">
+            <h2>Other Resources:</h2>
+            <ul>
+                <li><a href="https://dalekvim.github.io/Psychology-Quiz/">Psychology Quiz</a></li>
+                <li><a href="https://www.facebook.com/groups/storyIdeasGroup/">GCSE Revision Group</a></li>
+            </ul>
+        </div>
     </body>
+    <script src="index.js">
+    </script>
 </html>
