--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="Game_Ad">
             <h2>Other Resources:</h2>
             <ul>
-                <li><a href="https://dalekvim.github.io/Psychology-Quiz/">Psychology Quiz</a></li>
-                <li><a href="https://www.facebook.com/groups/storyIdeasGroup/">GCSE Revision Group</a></li>
+                <li><a href="https://dalekvim.github.io/Psychology-Quiz/">Psychology Quiz</a></li><br>
+                <li><a href="https://www.facebook.com/groups/storyIdeasGroup/">GCSE Revision Group</a></li><br>
             </ul>
         </div>
     </body>
