--- a/paper-2.html
+++ b/paper-2.html
@@ -30,5 +30,12 @@
 
             </p>
         </div>
+        <div class="Game_Ad">
+            <h2>Other Resources:</h2>
+            <ul>
+                <li><a href="https://dalekvim.github.io/Psychology-Quiz/">Psychology Quiz</a></li><br>
+                <li><a href="https://www.facebook.com/groups/storyIdeasGroup/">GCSE Revision Group</a></li><br>
+            </ul>
+        </div>
     </body>
 </html>
