--- a/paper-1.html
+++ b/paper-1.html
@@ -17,10 +17,23 @@
             <p>
                 
             </p>
-            <h2>Criminal Psychology</h2>
-            <p>
-
-            </p>
+            <div>
+                <h2>Criminal Psychology</h2>
+                <img class="Smaller-IMG" src="https://i.pinimg.com/originals/1d/71/f5/1d71f52a8856ba0ace4930fe5b992125.jpg" alt="Criminal Conversion Joke">
+                <h3>Introduction</h3>
+                <p>
+                    Defining Criminality is difficult because it's a <b alt="Created by Sociaty">Social Construct</b>;
+                    What was once a Crime, may not be Now, and what is Crime Now, may not be in the Future;
+                    It all depends on the people at that point in time.
+                    Eventhough this idea makes it hard to Identify what Traits make a Criminal
+                    (As none can be <a alt="Same Everywhere">Universal<a>), we know that Crime comes in 5 basic types:
+                        1. Violent
+                        2. Drug Related
+                        3. Acquisative
+                        4. Sexual
+                        5. Anti-social
+                </p>
+            </div>
             <h2>Developement</h2>
             <p>
 
