--- a/paper-1.html
+++ b/paper-1.html
@@ -26,12 +26,13 @@
                     What was once a Crime, may not be Now, and what is Crime Now, may not be in the Future;
                     It all depends on the people at that point in time.
                     Eventhough this idea makes it hard to Identify what Traits make a Criminal
-                    (As none can be <a alt="Same Everywhere">Universal<a>), we know that Crime comes in 5 basic types:
-                        1. Violent
-                        2. Drug Related
-                        3. Acquisative
-                        4. Sexual
-                        5. Anti-social
+                    (As none can be <b alt="Same Everywhere">Universal<b>), we know that Crime comes in 5 basic types:
+                    <br> 1. Violent
+                    <br> 2. Drug-related
+                    <br> 3. Aqusitive
+                    <br> 4. Sexual
+                    <br> 5. Anti-social
+                    <br>
                 </p>
             </div>
             <h2>Developement</h2>
@@ -46,7 +47,7 @@
         <div class="Game_Ad">
             <h2>Other Resources:</h2>
             <ul>
-                <li><a href="https://dalekvim.github.io/Psychology-Quiz/">Psychology Quiz</a></li><br>
+                <li><a href="https://dalekvim.github.io/Psychology-Quiz/">Criminal Psychology Quiz</a></li><br>
                 <li><a href="https://www.facebook.com/groups/storyIdeasGroup/">GCSE Revision Group</a></li><br>
             </ul>
         </div>
