--- a/paper-1.html
+++ b/paper-1.html
@@ -33,6 +33,11 @@
                     <br> 4. Sexual
                     <br> 5. Anti-social
                     <br>
+                    Along with this you will also need to remember Core Theory One:
+                    The Social Learning Theory and Cooper & Mackie's Study to go with it
+                    and Core Theory Two:
+                    Eysnerics's Theory on Criminal Personility along with Heaven's Study.
+                    
                 </p>
             </div>
             <h2>Developement</h2>
