--- a/paper-1.html
+++ b/paper-1.html
@@ -34,10 +34,11 @@
                     <br> 5. Anti-social
                     <br>
                     Along with this you will also need to remember Core Theory One:
-                    The Social Learning Theory and Cooper & Mackie's Study to go with it
+                    The Social Learning Theory and Cooper & Mackie's Study to go with it,
                     and Core Theory Two:
-                    Eysnerics's Theory on Criminal Personility along with Heaven's Study.
-                    
+                    Eysnerics's Theory on Criminal Personility along with Heaven's Study.<br>
+                    If that wasn't enough, there's more;
+                    You will also have to understand how rehabilitation and punishments reduce crime rates.
                 </p>
             </div>
             <h2>Developement</h2>
