--- a/paper-1.html
+++ b/paper-1.html
@@ -38,7 +38,8 @@
                     and Core Theory Two:
                     Eysnerics's Theory on Criminal Personility along with Heaven's Study.<br>
                     If that wasn't enough, there's more;
-                    You will also have to understand how rehabilitation and punishments reduce crime rates.
+                    You will also have to understand how rehabilitation and punishments reduce crime rates.<br><br>
+					<a href="Criminal-Psychology/The-Cooper&Mackie-Study.html">Click here to Learn More</a>
                 </p>
             </div>
             <h2>Developement</h2>
