--- a/Criminal-Psychology/The-Cooper&Mackie-Study.html
+++ b/Criminal-Psychology/The-Cooper&Mackie-Study.html
@@ -10,11 +10,12 @@
                 <nav>
                     <ul>
                         <li><a href="Paper-1">Home</a></li>
-                        <li>Social Learning Theory</li>
-                        <li>Cooper & Makie Study</li>
+                        <li><a href="#">Social Learning Theory</a></li>
+                        <li><a href="#">Cooper & Makie Study</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
+        
     </body>
 </html>
