--- a/Criminal-Psychology/The-Cooper&Mackie-Study.html
+++ b/Criminal-Psychology/The-Cooper&Mackie-Study.html
@@ -16,6 +16,8 @@
                 </nav>
             </div>
         </header>
-        
+        <div class="main">
+            <h1>The Cooper And Mackie Study</h1>
+        </div>
     </body>
 </html>
