--- a/Criminal-Psychology/The-Cooper&Mackie-Study.html
+++ b/Criminal-Psychology/The-Cooper&Mackie-Study.html
@@ -9,7 +9,7 @@
                 <img class="logo" src="Logo.png">
                 <nav>
                     <ul>
-                        <li><a href="/GCSE-Psychology-Revision/Paper-1">Home</a></li>
+                        <li><a href="https://dalekvim.github.io/GCSE-Psychology-Revision/paper-1.html">Home</a></li>
                         <li><a href="#">Social Learning Theory</a></li>
                         <li><a href="#">Cooper & Makie Study</a></li>
                     </ul>
