--- a/Criminal-Psychology/The-Cooper&Mackie-Study.html
+++ b/Criminal-Psychology/The-Cooper&Mackie-Study.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="Logo.png" href="https://theideaofastory.blogspot.com/">
+            <a href="https://theideaofastory.blogspot.com/"><img class="logo" src="Logo.png"></a>
             <nav>
                 <li><a href="https://dalekvim.github.io/GCSE-Psychology-Revision/paper-1.html">Home</a></li>
                 <li><a href="#">Social Learning Theory</a></li>
@@ -22,7 +22,7 @@
                 <p>
                     Cooper & Mackie's Study occured quite soon after Computer Games became widely avaliable.
                     At the time there were various ideas sorrounding the topic (similar to the kind parents are likely to have).<br>
-                    
+
                 </p>
             </div>
         </main>
